refactor: become the e (#1)
* refactor(exts): make everything 'e'

* refactor(compose): change service name to 'e-bot'

* refactor(package): replace with 'e-bot'

* refactor(bot): change status to 'competing with e'

* docs(README): become the e

* refactor(env.d): change typings to DEFAULT_E_ROLE_ID

* docs(README): add note that this was o-bot

* style: format

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ version: "3"
 services:
   bot:
     restart: unless-stopped
-    container_name: o-bot
+    container_name: e-bot
     build:
       context: .
       dockerfile: Dockerfile
     environment:
       TOKEN: $TOKEN
       GUILD_ID: $GUILD_ID
-      DEFAULT_O_ROLE_ID: $DEFAULT_O_ROLE_ID
+      DEFAULT_E_ROLE_ID: $DEFAULT_E_ROLE_ID
       LOG_CHANNEL_ID: $LOG_CHANNEL_ID
